Adicionando testes unitários
