# app/routes.py
@@ -2,22 +2,22 @@ from .crud import criarPaciente, listarPacientes, buscarPorId, editarPaciente, d
 
 def setup_routes(app):
     
-    @app.route('/users', methods=['POST'])
+    @app.route('/pacientes', methods=['POST'])
     def cadastrarPaciente():
         return criarPaciente()
 
-    @app.route('/users', methods=['GET'])
+    @app.route('/pacientes', methods=['GET'])
     def verPacientes():
         return listarPacientes()
     
-    @app.route('/users/<int:id>', methods=['GET'])
+    @app.route('/pacientes/<int:id>', methods=['GET'])
     def verPaciente(id):
         return buscarPorId(id)
     
-    @app.route('/users/<int:id>', methods=['PUT'])
+    @app.route('/pacientes/<int:id>', methods=['PUT'])
     def editarDados(id):
         return editarPaciente(id)
 
-    @app.route('/users/<int:id>', methods=['DELETE'])
+    @app.route('/pacientes/<int:id>', methods=['DELETE'])
     def deletarPessoa(id):
         return deletarPaciente(id)
